added hello, world!

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-        
+        Hello, world! <!-- I added this line in to content/index.content, only thing done after `nsm init`-->
     </body>
 </html>
 
